# nu_plugin_json_path

./: Cargo.toml
.github/workflows/: release.yml
