[package]
name = "nu_plugin_json_path"
version = "0.0.4"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_json_path"
description = "a nushell plugin created to parse json files using jsonpath"
license = "MIT"

[dependencies]
serde_json = "1.0.95"
serde_json_path = "0.6.0"
nu-plugin = "*"
nu-protocol = "*"

